--- a/momentum/index.html
+++ b/momentum/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
+        <img src="./images/1.jpg" class="bgImage" />
         <div class="js-clock">
             <h1 class="clock">00:00</h1>
         </div>
