--- a/momentum/index.html
+++ b/momentum/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Momentum</title>
         <link rel="stylesheet" href="index.css" />
         <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     </head>
